Bug 433876 - Panels/docks cannot be moved to other displays(or anything other than "Primary Display")
Summary: Panels/docks cannot be moved to other displays(or anything other than "Primar...
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Unmaintained
Component: application (other bugs)
Version First Reported In: git (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-03-02 20:32 UTC by Michael Monaco
Modified: 2021-03-04 02:23 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Monaco 2021-03-02 20:32:36 UTC
SUMMARY
I've also posted this as an issue on the Gitlab page, but I read on the old github page this is the best place to post issues.

For reference, here is the issue report on the gitlab:
https://invent.kde.org/plasma/latte-dock/-/issues/51

Whenever I try to move docks/panels to other displays or anything other than "Primary Display," the panel settings dialogue and the panel itself become blurry boxes(I assume they halt or stop for some reason).

STEPS TO REPRODUCE
1. Make a copy of a panel or dock for the purpose of testing 
2. Change display of the copied panel/dock from "Follow Primary Display" to anything else, such as "DP-0"

OBSERVED RESULT
The panel settings and the panel itself stop/halt(show up as blurry boxes due to my theme). After clicking "edit panel" on a different panel/dock the blurry boxes go away. However, the panel/dock that you attempt to move also disappears and does not change displays.

EXPECTED RESULT
The panel/dock moves to the display it is set to.

SOFTWARE/OS VERSIONS
Linux: Garuda Linux 
(available in About System)
KDE Plasma Version: 5.21.1
KDE Frameworks Version: 5.79.0
Qt Version: 5.15.2
Comment 1 Michail Vourlakos 2021-03-02 21:55:42 UTC
Thank u, I will try to reproduce in my system.
Comment 2 Michail Vourlakos 2021-03-03 20:23:13 UTC
Git commit 03bd034898977804a99a4bf447553d771975ac3e by Michail Vourlakos.
Committed on 03/03/2021 at 20:04.
Pushed by mvourlakos into branch 'master'.

fix user changing screen behavior

--wait for the actual screen change to really
happen in order to reshow the dock afterwards

M  +15   -13   app/view/positioner.cpp
M  +1    -1    app/view/positioner.h
M  +5    -0    app/view/view.cpp
M  +1    -0    app/view/view.h

https://invent.kde.org/plasma/latte-dock/commit/03bd034898977804a99a4bf447553d771975ac3e
Comment 3 Michail Vourlakos 2021-03-03 20:28:16 UTC
thank u for this bug report!
I think that multi-screen behavior now should be exceptional!! If you find any other issue please report again!
Thanks
Comment 4 Michael Monaco 2021-03-03 21:06:16 UTC
Thanks for getting it fixed so quickly!

I'm waiting for the Chaotic-AUR(repository with pre-compiled AUR packages) to update with the commit and then I will try it out!

I'll report back on the gitlab issue and close it if the commit works!
Comment 5 Michael Monaco 2021-03-03 22:00:00 UTC
(In reply to Michail Vourlakos from comment #3)
> thank u for this bug report!
> I think that multi-screen behavior now should be exceptional!! If you find
> any other issue please report again!
> Thanks

Alright, I tested out the new update and it works!

The only issue(or maybe it's just a change) is that I can't find "Copy" option under the "Add.." menu. 

Did the option move or is it still supposed to be in "Add..."?
Comment 6 Michail Vourlakos 2021-03-03 22:39:32 UTC
(In reply to Michael Monaco from comment #5)
> (In reply to Michail Vourlakos from comment #3)
> > thank u for this bug report!
> > I think that multi-screen behavior now should be exceptional!! If you find
> > any other issue please report again!
> > Thanks
> 
> Alright, I tested out the new update and it works!
> 
> The only issue(or maybe it's just a change) is that I can't find "Copy"
> option under the "Add.." menu. 
> 
> Did the option move or is it still supposed to be in "Add..."?

I just cleared the redesign. Right click the dock in edit mode and you will find it in the context menu, there are plenty new and nice options now for Dock management in the right click context menu.
Comment 7 Michail Vourlakos 2021-03-03 22:40:02 UTC
In the right click context menu, is now called "Duplicate Dock/Panel"
Comment 8 Michael Monaco 2021-03-04 02:23:32 UTC
Alright, thanks!

I tried messing around for a few minutes and I couldn't find it.

I feel like the previous place the "copy" function was at was more user-friendly. However, that could just be because I'm used to the old location.

Anyways, I'll update the gitlab issue and close it