fix user changing screen behavior

--wait for the actual screen change to really
happen in order to reshow the dock afterwards

BUG:433876